# netflector

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker_test.sh  os-release.sh  release-lib.sh  release.sh  renovate.json  rust-toolchain.toml  version.sh
.github/workflows/: build-daemon-pkgs.yml  ci.yml  pkg-deploy.yml  publish-daemon.yml  publish-plugin.yml  release.yml  verify-ci.yml
ci/: freebsd-nightly.env  freebsd-pin.sh  freebsd-ports-tree.sh  freebsd-ssh-runner.sh  freebsd-sysroot.sh  freebsd-vm.sh  freebsd.env  freebsd14-opnsense.env  freebsd14.env  freebsd15-opnsense.env  freebsd15.env  port-sync.py
e2e/: config-dial.toml  config-wsd.toml  config.toml  probe.py  run.py
man/: netflector.8  netflector.toml.5
src/: capture.rs  checksum.rs  cli.rs  config.rs  dispatch.rs  error.rs  interface.rs  lib.rs  libcex.rs  logging.rs  main.rs  memory_report.rs  net.rs  reactor.rs  reflector.rs  sys.rs
src/capture/: af_packet.rs  bpf.rs  filter.rs
src/config/: env.rs  error.rs  mod.rs  raw.rs  value.rs
src/dispatch/: counters.rs  datagram.rs  dial_context.rs  interface_table.rs  multicast.rs  pair_tests.rs
src/interface/: address_monitor.rs  getifaddrs.rs  interface_monitor.rs  netlink.rs  rtnetlink.rs
src/libcex/: bpf.rs  bpf_device.rs  in6_ifreq.rs  multicast.rs  netlink.rs  sockopt.rs
src/net/: checksum.rs  frame.rs  http.rs  mac.rs  mdns.rs  packet.rs  port_reservation.rs  ssdp.rs  stream_buffer.rs  tcp.rs  uninit_buf.rs  wsd.rs
src/reactor/: arena.rs  mod.rs  poll.rs  signal.rs
src/reflector/: dial.rs  mdns.rs  search.rs  (+4 more)
(+13 files in other folders)
