[package]
name = "ruflector"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "1"
log = { version = "0.4", features = ["release_max_level_debug"] }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
